# conda-forge-warning

./: .env.tpl  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  LICENSE  Makefile  README.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
api/references/: index.html  references.md
changelog/: index.html
conda/: dev.yaml
contributing/: contributing.md  index.html
docs/: contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.rst
installation/: index.html
search/: search_index.json
src/cf_warning/: __init__.py  main.py  reader.py  report.py
tests/: __init__.py  test_cf_warning.py
